--- a/snake.css
+++ b/snake.css
@@ -6,7 +6,7 @@
 
 body {
 	background: url(./img/snakeskin1.jpg) repeat;
-	font-family: sans-serif;
+	font-family: 'Lucida Grande', Helvetica, Arial, Sans-Serif;
 }
 
 
@@ -17,6 +17,7 @@ header {
 }
 
 #gameinfo {
+	position: relative;
 	background: #ccc;
 	opacity: .85;
 	border: 1px solid red;
@@ -26,18 +27,37 @@ header {
 
 
 #gameStats {
+	position: absolute;
 	width: 400px;
+	height: 120px;
+	top: 20px;
+	right: 15px;
 	margin: 0 auto;
+	border: 1px solid blue;
 	text-align: center;
+	border-radius: 7px;
+	background: white;
+}
+
+fieldset {
+	border: none;
+}
+
+#optionCheckboxes {
+	margin: 15px 15px 0;
+	text-align: left;
+}
+
+
+.bigBold {
 	font-family: monospace;
 	font-size: 2em;
 }
 
 
-
 #playarea {
 	border: 3px solid #777;
-	margin: 30px auto;
+	margin: 50px auto;
 	position: relative;
 }
 
@@ -61,4 +81,9 @@ header {
 
 .cell-food {
 	background: green;
+}
+
+.shadow {
+	-webkit-box-shadow: 3px 3px 6px 3px #2f2205;
+	box-shadow: 3px 3px 6px 3px #2f2205; 
 }
