Detect self collision

--- a/css/snake.css
+++ b/css/snake.css
@@ -5,38 +5,62 @@
 }
 
 body {
-	background: url(../img/bkgd1.jpg) repeat;
+	background: url(../img/repeat1.jpg) repeat;
 	font-family: 'Lucida Grande', Helvetica, Arial, Sans-Serif;
 }
 
 
 header {
-	background: white;
-	opacity: .85;
-	padding: 15px;
-}
-
-#gameinfo {
 	position: relative;
-	background: #ccc;
-	opacity: .85;
-	border: 1px solid red;
+	top: 0px;
+	left: 20px;
+	width: 500px;
+	-webkit-border-radius: 0 0 9px 9px;
+	border-radius: 0 0 9px 9px;
 
+	opacity: .95;
 	padding: 15px;
+
+	background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(100%,rgba(255,255,255,0))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 ); /* IE6-9 */
 }
 
+header h1 {
+	font-size: 26px;
+}
 
 #gameStats {
 	position: absolute;
 	width: 400px;
 	height: 120px;
-	top: 20px;
-	right: 15px;
+	top: 30px;
+	right: 30px;
 	margin: 0 auto;
 	/* border: 1px solid blue;  */
 	text-align: center;
 	border-radius: 7px;
-	background: white;
+
+	background: rgb(205,235,142); /* Old browsers */
+	background: -moz-radial-gradient(center, ellipse cover,  rgba(205,235,142,1) 0%, rgba(165,201,86,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(205,235,142,1)), color-stop(100%,rgba(165,201,86,1))); /* Chrome,Safari4+ */
+	background: -webkit-radial-gradient(center, ellipse cover,  rgba(205,235,142,1) 0%,rgba(165,201,86,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-radial-gradient(center, ellipse cover,  rgba(205,235,142,1) 0%,rgba(165,201,86,1) 100%); /* Opera 12+ */
+	background: -ms-radial-gradient(center, ellipse cover,  rgba(205,235,142,1) 0%,rgba(165,201,86,1) 100%); /* IE10+ */
+	background: radial-gradient(ellipse at center,  rgba(205,235,142,1) 0%,rgba(165,201,86,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cdeb8e', endColorstr='#a5c956',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+}
+
+#gameStats h3 {
+	color: red;
+}
+
+#gameMsg {
+	text-align: center;
 }
 
 fieldset {
@@ -57,9 +81,9 @@ fieldset {
 
 #playarea {
 	border: 3px solid #777;
-	margin: 50px auto;
+	margin: 30px auto;
 	position: relative;
-	background: url('../img/island1.jpg') no-repeat; /* #444; */
+	background: #444; /* url('../img/island1.jpg') no-repeat; /* #444; */
 
 }
 
@@ -70,7 +94,7 @@ fieldset {
 	/* display: inline-block;  */
 	/* background: #ccc;  */
 	margin: 0;
-
+	border: 1px dotted #525251;
 }
 
 
