--- a/css/snake.css
+++ b/css/snake.css
@@ -61,11 +61,9 @@ header h1 {
 
 #gameMsg {
 	text-align: center;
+	margin-top:1em;
 }
 
-fieldset {
-	border: none;
-}
 
 #optionCheckboxes {
 	margin: 15px 15px 0;
