--- a/css/snake.css
+++ b/css/snake.css
@@ -78,8 +78,8 @@ header h1 {
 
 
 #playarea {
-	border: 3px solid #777;
-	margin: 30px auto;
+	border: 3px solid rgba(205,235,142,1); 
+	margin: 10px auto;
 	position: relative;
 	background: #444; /* url('../img/island1.jpg') no-repeat; /* #444; */
 
